Modified links of emotional illustration

--- a/pages/emoCardsAmazed.html
+++ b/pages/emoCardsAmazed.html
@@ -23,25 +23,25 @@
             <button type="button" class="class-card me-16 bg-amazed link-gray-900 class-card-amazed" data-bs-toggle="modal" data-bs-target="#amazed01">
                 <p>錯&nbsp;愕</p>
                 <div class="img-box">
-                  <img src="../assets/images/05-amazed/amazed01-stunned.svg" alt="amazed">
+                  <img src="https://wavemocards.com/frontend/upload/05-amazed/amazed01-stunned.svg" alt="amazed">
                 </div>
             </button>
             <button type="button" class="class-card me-16 bg-amazed link-gray-900 class-card-amazed" data-bs-toggle="modal" data-bs-target="#amazed02">
                 <p>驚&nbsp;訝</p>
                 <div class="img-box">
-                  <img src="../assets/images/05-amazed/amazed02-astonishment.svg" alt="amazed">
+                  <img src="https://wavemocards.com/frontend/upload/05-amazed/amazed02-astonishment.svg" alt="amazed">
                 </div>
             </button>
             <button type="button" class="class-card me-16 bg-amazed link-gray-900 class-card-amazed" data-bs-toggle="modal" data-bs-target="#amazed03">
                 <p>驚&nbsp;喜</p>
                 <div class="img-box">
-                  <img src="../assets/images/05-amazed/amazed03-surprised.svg" alt="amazed">
+                  <img src="https://wavemocards.com/frontend/upload/05-amazed/amazed03-surprised.svg" alt="amazed">
                 </div>
             </button>
             <button type="button" class="class-card me-16 bg-amazed link-gray-900 class-card-amazed" data-bs-toggle="modal" data-bs-target="#amazed04">
                 <p>震&nbsp;驚</p>
                 <div class="img-box">
-                  <img src="../assets/images/05-amazed/amazed04-shocked.svg" alt="amazed">
+                  <img src="https://wavemocards.com/frontend/upload/05-amazed/amazed04-shocked.svg" alt="amazed">
                 </div>
             </button>
         </div>
