--- a/pages/emoCardsClassifiedExpand.html
+++ b/pages/emoCardsClassifiedExpand.html
@@ -30,7 +30,7 @@
               <button type="button" class="class-card mb-12 mb-12 me-16 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#happy01">
                   <p>滿&nbsp;足</p>
                   <div class="img-box">
-                    <img src="../assets/images/01-happy/happy01-statisfy.svg" alt="滿足">
+                    <img src="https://wavemocards.com/frontend/upload/01-happy/happy01-statisfy.svg" alt="滿足">
                   </div>
               </button>
               <button type="button" class="class-card mb-12 me-16 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#happy02">
