--- a/pages/emoCardsRelived.html
+++ b/pages/emoCardsRelived.html
@@ -23,37 +23,37 @@
           <button type="button" class="class-card me-16 bg-relived link-gray-900 class-card-relived" data-bs-toggle="modal" data-bs-target="#relived01">
             <p>舒&nbsp;服</p>
             <div class="img-box">
-              <img src="../assets/images/03-relived/relived01-comfortable.svg" alt="舒服">
+              <img src="https://wavemocards.com/frontend/upload/03-relived/relived01-comfortable.svg" alt="舒服">
             </div>
           </button>
           <button type="button" class="class-card me-16 bg-relived link-gray-900 class-card-relived" data-bs-toggle="modal" data-bs-target="#relived02">
             <p>放&nbsp;鬆</p>
             <div class="img-box">
-              <img src="../assets/images/03-relived/relived02-relax.svg" alt="放鬆">
+              <img src="https://wavemocards.com/frontend/upload/03-relived/relived02-relax.svg" alt="放鬆">
             </div>
           </button>
           <button type="button" class="class-card me-16 bg-relived link-gray-900 class-card-relived" data-bs-toggle="modal" data-bs-target="#relived03">
             <p>平&nbsp;靜</p>
             <div class="img-box">
-              <img src="../assets/images/03-relived/relived03-calm.svg" alt="平靜">
+              <img src="https://wavemocards.com/frontend/upload/03-relived/relived03-calm.svg" alt="平靜">
             </div>
           </button>
           <button type="button" class="class-card me-16 bg-relived link-gray-900 class-card-relived" data-bs-toggle="modal" data-bs-target="#relived04">
             <p>安&nbsp;心</p>
             <div class="img-box">
-              <img src="../assets/images/03-relived/relived04-relieved.svg" alt="安心">
+              <img src="https://wavemocards.com/frontend/upload/03-relived/relived04-relieved.svg" alt="安心">
             </div>
           </button>
           <button type="button" class="class-card me-16 bg-relived link-gray-900 class-card-relived" data-bs-toggle="modal" data-bs-target="#relived05">
             <p>自&nbsp;在</p>
             <div class="img-box">
-              <img src="../assets/images/03-relived/relived05-ease.svg" alt="自在">
+              <img src="https://wavemocards.com/frontend/upload/03-relived/relived05-ease.svg" alt="自在">
             </div>
           </button>
           <button type="button" class="class-card me-16 bg-relived link-gray-900 class-card-relived" data-bs-toggle="modal" data-bs-target="#relived06">
             <p>信&nbsp;任</p>
             <div class="img-box">
-              <img src="../assets/images/03-relived/relived06-trust.svg" alt="信任">
+              <img src="https://wavemocards.com/frontend/upload/03-relived/relived06-trust.svg" alt="信任">
             </div>
           </button>
         </div>
