--- a/pages/findEmoAmazed.html
+++ b/pages/findEmoAmazed.html
@@ -37,7 +37,7 @@
                     <button type="button" class="class-card mb-12 bg-amazed link-gray-900 class-card-amazed" data-bs-toggle="modal" data-bs-target="#addAmazed01">
                         <p>錯&nbsp;愕</p>
                         <div class="img-box">
-                            <img src="../assets/images/05-amazed/amazed01-stunned.svg" alt="錯愕">
+                            <img src="https://wavemocards.com/frontend/upload/05-amazed/amazed01-stunned.svg" alt="錯愕">
                         </div>
                     </button>
                 </div>
@@ -46,7 +46,7 @@
                     <button type="button" class="class-card mb-12 bg-amazed link-gray-900 class-card-amazed" data-bs-toggle="modal" data-bs-target="#addAmazed02">
                         <p>驚&nbsp;訝</p>
                         <div class="img-box">
-                            <img src="../assets/images/05-amazed/amazed02-astonishment.svg" alt="驚訝">
+                            <img src="https://wavemocards.com/frontend/upload/05-amazed/amazed02-astonishment.svg" alt="驚訝">
                         </div>
                     </button>
                 </div>
@@ -55,7 +55,7 @@
                     <button type="button" class="class-card mb-12 bg-amazed link-gray-900 class-card-amazed" data-bs-toggle="modal" data-bs-target="#addAmazed03">
                         <p>驚&nbsp;喜</p>
                         <div class="img-box">
-                            <img src="../assets/images/05-amazed/amazed03-surprised.svg" alt="驚喜">
+                            <img src="https://wavemocards.com/frontend/upload/05-amazed/amazed03-surprised.svg" alt="驚喜">
                         </div>
                     </button>
                 </div>
@@ -64,7 +64,7 @@
                     <button type="button" class="class-card mb-12 bg-amazed link-gray-900 class-card-amazed" data-bs-toggle="modal" data-bs-target="#addAmazed04">
                         <p>震&nbsp;驚</p>
                         <div class="img-box">
-                            <img src="../assets/images/05-amazed/amazed04-shocked.svg" alt="震驚">
+                            <img src="https://wavemocards.com/frontend/upload/05-amazed/amazed04-shocked.svg" alt="震驚">
                         </div>
                     </button>
                 </div>
