--- a/pages/findEmoClassified.html
+++ b/pages/findEmoClassified.html
@@ -47,55 +47,55 @@
                     <a class="class-card me-16 bg-happy link-gray-900 class-card-happy" href="findEmoHappy.html">
                     <p>快&nbsp;樂</p>
                     <div class="img-box">
-                        <img src="../assets/images/01-happy/happy02-happy.svg" alt="快樂">
+                        <img src="https://wavemocards.com/frontend/upload/01-happy/happy02-happy.svg" alt="快樂">
                     </div>
                     </a>
                     <a class="class-card me-16 bg-expectation link-gray-900 class-card-expectation" href="findEmoExpectation.html">
                     <p>期&nbsp;待</p>
                     <div class="img-box">
-                        <img src="../assets/images/02-expectation/expaction01-expect.svg" alt="期待">
+                        <img src="https://wavemocards.com/frontend/upload/02-expectation/expaction01-expect.svg" alt="期待">
                     </div>
                     </a>
                     <a class="class-card me-16 bg-relived link-gray-900 class-card-relived" href="findEmoRelived.html">
                     <p>安&nbsp;心</p>
                     <div class="img-box">
-                        <img src="../assets/images/03-relived/relived04-relieved.svg" alt="安心">
+                        <img src="https://wavemocards.com/frontend/upload/03-relived/relived04-relieved.svg" alt="安心">
                     </div>
                     </a>
                     <a class="class-card me-16 bg-unstable link-gray-900 class-card-unstable" href="findEmoUnstable.html">
                     <p>不&nbsp;安</p>
                     <div class="img-box">
-                        <img src="../assets/images/04-unstable/unstable04-anxious.svg" alt="不安">
+                        <img src="https://wavemocards.com/frontend/upload/04-unstable/unstable04-anxious.svg" alt="不安">
                     </div>
                     </a>
                     <a class="class-card me-16 bg-amazed link-gray-900 class-card-amazed" href="findEmoAmazed.html">
                     <p>驚&nbsp;訝</p>
                     <div class="img-box">
-                        <img src="../assets/images/05-amazed/amazed02-astonishment.svg" alt="驚訝">
+                        <img src="https://wavemocards.com/frontend/upload/05-amazed/amazed02-astonishment.svg" alt="驚訝">
                     </div>
                     </a>
                     <a class="class-card me-16 bg-sadness link-gray-900 class-card-sadness" href="findEmoSadness.html">
                     <p>低&nbsp;落</p>
                     <div class="img-box">
-                        <img src="../assets/images/06-sadness/sadness05-frustrated.svg" alt="低落">
+                        <img src="https://wavemocards.com/frontend/upload/06-sadness/sadness05-frustrated.svg" alt="低落">
                     </div>
                     </a>
                     <a class="class-card me-16 bg-hate link-gray-900 class-card-hate" href="findEmoHate.html">
                     <p>討&nbsp;厭</p>
                     <div class="img-box">
-                        <img src="../assets/images/07-hate/hate03-inferiority.svg" alt="討厭">
+                        <img src="https://wavemocards.com/frontend/upload/07-hate/hate03-inferiority.svg" alt="討厭">
                     </div>
                     </a>
                     <a class="class-card me-16 bg-anger link-gray-900 class-card-anger" href="findEmoAnger.html">
                     <p>生&nbsp;氣</p>
                     <div class="img-box">
-                        <img src="../assets/images/08-anger/anger02-irritated.svg" alt="生氣">
+                        <img src="https://wavemocards.com/frontend/upload/08-anger/anger02-irritated.svg" alt="生氣">
                     </div>
                     </a>
                     <a class="class-card me-16 bg-others link-gray-900 class-card-others" href="findEmoOthers.html">
                     <p>其&nbsp;他</p>
                     <div class="img-box">
-                        <img src="../assets/images/09-others/others01-release.svg" alt="其他">
+                        <img src="https://wavemocards.com/frontend/upload/09-others/others01-release.svg" alt="其他">
                     </div>
                     </a>
                 </div>
