--- a/pages/findEmoOthers.html
+++ b/pages/findEmoOthers.html
@@ -37,7 +37,7 @@
                     <button type="button" class="class-card mb-12 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#addOthers01">
                         <p>釋&nbsp;懷</p>
                         <div class="img-box">
-                            <img src="../assets/images/09-others/others01-release.svg" alt="釋懷">
+                            <img src="https://wavemocards.com/frontend/upload/09-others/others01-release.svg" alt="釋懷">
                         </div>
                     </button>
                 </div>
@@ -46,7 +46,7 @@
                     <button type="button" class="class-card mb-12 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#addOthers02">
                         <p>尷&nbsp;尬</p>
                         <div class="img-box">
-                            <img src="../assets/images/09-others/others02-awkward.svg" alt="尷尬">
+                            <img src="https://wavemocards.com/frontend/upload/09-others/others02-awkward.svg" alt="尷尬">
                         </div>
                     </button>
                 </div>
@@ -55,7 +55,7 @@
                     <button type="button" class="class-card mb-12 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#addOthers03">
                         <p>羨&nbsp;慕</p>
                         <div class="img-box">
-                            <img src="../assets/images/09-others/others03-envy.svg" alt="羨慕">
+                            <img src="https://wavemocards.com/frontend/upload/09-others/others03-envy.svg" alt="羨慕">
                         </div>
                     </button>
                 </div>
@@ -64,7 +64,7 @@
                     <button type="button" class="class-card mb-12 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#addOthers04">
                         <p>愧&nbsp;疚</p>
                         <div class="img-box">
-                            <img src="../assets/images/09-others/others04-guilty.svg" alt="愧疚">
+                            <img src="https://wavemocards.com/frontend/upload/09-others/others04-guilty.svg" alt="愧疚">
                         </div>
                     </button>
                 </div>
@@ -73,7 +73,7 @@
                     <button type="button" class="class-card mb-12 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#addOthers05">
                         <p>矛&nbsp;盾</p>
                         <div class="img-box">
-                            <img src="../assets/images/09-others/others05-conflict.svg" alt="矛盾">
+                            <img src="https://wavemocards.com/frontend/upload/09-others/others05-conflict.svg" alt="矛盾">
                         </div>
                     </button>
                 </div>
@@ -82,7 +82,7 @@
                     <button type="button" class="class-card mb-12 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#addOthers06">
                         <p>後&nbsp;悔</p>
                         <div class="img-box">
-                            <img src="../assets/images/09-others/others06-regret.svg" alt="後悔">
+                            <img src="https://wavemocards.com/frontend/upload/09-others/others06-regret.svg" alt="後悔">
                         </div>
                     </button>
                 </div>
@@ -91,7 +91,7 @@
                     <button type="button" class="class-card mb-12 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#addOthers07">
                         <p>委&nbsp;屈</p>
                         <div class="img-box">
-                            <img src="../assets/images/09-others/others07-injustice.svg" alt="委屈">
+                            <img src="https://wavemocards.com/frontend/upload/09-others/others07-injustice.svg" alt="委屈">
                         </div>
                     </button>
                 </div>
@@ -100,7 +100,7 @@
                     <button type="button" class="class-card mb-12 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#addOthers08">
                         <p>寂&nbsp;寞</p>
                         <div class="img-box">
-                            <img src="../assets/images/09-others/others08-loneliness.svg" alt="寂寞">
+                            <img src="https://wavemocards.com/frontend/upload/09-others/others08-loneliness.svg" alt="寂寞">
                         </div>
                     </button>
                 </div>
@@ -109,7 +109,7 @@
                     <button type="button" class="class-card mb-12 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#addOthers09">
                         <p>羞&nbsp;恥</p>
                         <div class="img-box">
-                            <img src="../assets/images/09-others/others09-shame.svg" alt="羞恥">
+                            <img src="https://wavemocards.com/frontend/upload/09-others/others09-shame.svg" alt="羞恥">
                         </div>
                     </button>
                 </div>
@@ -118,7 +118,7 @@
                     <button type="button" class="class-card mb-12 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#addOthers10">
                         <p>感&nbsp;動</p>
                         <div class="img-box">
-                            <img src="../assets/images/09-others/others10-touching.svg" alt="感動">
+                            <img src="https://wavemocards.com/frontend/upload/09-others/others10-touching.svg" alt="感動">
                         </div>
                     </button>
                 </div>
@@ -127,7 +127,7 @@
                     <button type="button" class="class-card mb-12 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#addOthers11">
                         <p>激&nbsp;動</p>
                         <div class="img-box">
-                            <img src="../assets/images/09-others/others11-excited.svg" alt="激動">
+                            <img src="https://wavemocards.com/frontend/upload/09-others/others11-excited.svg" alt="激動">
                         </div>
                     </button>
                 </div>
