--- a/pages/emoCardsOthers.html
+++ b/pages/emoCardsOthers.html
@@ -23,67 +23,67 @@
           <button type="button" class="class-card me-16 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#others01">
             <p>釋&nbsp;懷</p>
             <div class="img-box">
-              <img src="../assets/images/09-others/others01-release.svg" alt="釋懷">
+              <img src="https://wavemocards.com/frontend/upload/09-others/others01-release.svg" alt="釋懷">
             </div>
           </button>
           <button type="button" class="class-card me-16 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#others02">
             <p>尷&nbsp;尬</p>
             <div class="img-box">
-              <img src="../assets/images/09-others/others02-awkward.svg" alt="尷尬">
+              <img src="https://wavemocards.com/frontend/upload/09-others/others02-awkward.svg" alt="尷尬">
             </div>
           </button>
           <button type="button" class="class-card me-16 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#others03">
             <p>羨&nbsp;慕</p>
             <div class="img-box">
-              <img src="../assets/images/09-others/others03-envy.svg" alt="羨慕">
+              <img src="https://wavemocards.com/frontend/upload/09-others/others03-envy.svg" alt="羨慕">
             </div>
           </button>
           <button type="button" class="class-card me-16 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#others04">
             <p>愧&nbsp;疚</p>
             <div class="img-box">
-              <img src="../assets/images/09-others/others04-guilty.svg" alt="愧疚">
+              <img src="https://wavemocards.com/frontend/upload/09-others/others04-guilty.svg" alt="愧疚">
             </div>
           </button>
           <button type="button" class="class-card me-16 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#others05">
             <p>矛&nbsp;盾</p>
             <div class="img-box">
-              <img src="../assets/images/09-others/others05-conflict.svg" alt="矛盾">
+              <img src="https://wavemocards.com/frontend/upload/09-others/others05-conflict.svg" alt="矛盾">
             </div>
           </button>
           <button type="button" class="class-card me-16 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#others06">
             <p>後&nbsp;悔</p>
             <div class="img-box">
-              <img src="../assets/images/09-others/others06-regret.svg" alt="後悔">
+              <img src="https://wavemocards.com/frontend/upload/09-others/others06-regret.svg" alt="後悔">
             </div>
           </button>
           <button type="button" class="class-card me-16 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#others07">
             <p>委&nbsp;屈</p>
             <div class="img-box">
-              <img src="../assets/images/09-others/others07-injustice.svg" alt="委屈">
+              <img src="https://wavemocards.com/frontend/upload/09-others/others07-injustice.svg" alt="委屈">
             </div>
           </button>
           <button type="button" class="class-card me-16 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#others08">
             <p>寂&nbsp;寞</p>
             <div class="img-box">
-              <img src="../assets/images/09-others/others08-loneliness.svg" alt="寂寞">
+              <img src="https://wavemocards.com/frontend/upload/09-others/others08-loneliness.svg" alt="寂寞">
             </div>
           </button>
           <button type="button" class="class-card me-16 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#others09">
             <p>羞&nbsp;恥</p>
             <div class="img-box">
-              <img src="../assets/images/09-others/others09-shame.svg" alt="羞恥">
+              <img src="https://wavemocards.com/frontend/upload/09-others/others09-shame.svg" alt="羞恥">
             </div>
           </button>
           <button type="button" class="class-card me-16 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#others10">
             <p>感&nbsp;動</p>
             <div class="img-box">
-              <img src="../assets/images/09-others/others10-touching.svg" alt="感動">
+              <img src="https://wavemocards.com/frontend/upload/09-others/others10-touching.svg" alt="感動">
             </div>
           </button>
           <button type="button" class="class-card me-16 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#others11">
             <p>激&nbsp;動</p>
             <div class="img-box">
-              <img src="../assets/images/09-others/others11-excited.svg" alt="激動">
+              <img src="https://wavemocards.com/frontend/upload/09-others/others11-excited.svg" alt="激動">
             </div>
           </button>
         </div>
