--- a/pages/emoCardsSadness.html
+++ b/pages/emoCardsSadness.html
@@ -23,73 +23,73 @@
           <button type="button" class="class-card mb-12 me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness01">
             <p>無&nbsp;奈</p>
             <div class="img-box">
-              <img src="../assets/images/06-sadness/sadness01-helpless.svg" alt="無奈">
+              <img src="https://wavemocards.com/frontend/upload/06-sadness/sadness01-helpless.svg" alt="無奈">
             </div>
         </button>
         <button type="button" class="class-card mb-12 me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness02">
             <p>挫&nbsp;折</p>
             <div class="img-box">
-              <img src="../assets/images/06-sadness/sadness02-setback.svg" alt="挫折">
+              <img src="https://wavemocards.com/frontend/upload/06-sadness/sadness02-setback.svg" alt="挫折">
             </div>
         </button>
         <button type="button" class="class-card mb-12 me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness03">
             <p>失&nbsp;望</p>
             <div class="img-box">
-              <img src="../assets/images/06-sadness/sadness03-disappointed.svg" alt="失望">
+              <img src="https://wavemocards.com/frontend/upload/06-sadness/sadness03-disappointed.svg" alt="失望">
             </div>
         </button>
         <button type="button" class="class-card mb-12 me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness04">
             <p>無&nbsp;力</p>
             <div class="img-box">
-              <img src="../assets/images/06-sadness/sadness04-powerless.svg" alt="無力">
+              <img src="https://wavemocards.com/frontend/upload/06-sadness/sadness04-powerless.svg" alt="無力">
             </div>
         </button>
         <button type="button" class="class-card mb-12 me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness05">
             <p>沮&nbsp;喪</p>
             <div class="img-box">
-              <img src="../assets/images/06-sadness/sadness05-frustrated.svg" alt="沮喪">
+              <img src="https://wavemocards.com/frontend/upload/06-sadness/sadness05-frustrated.svg" alt="沮喪">
             </div>
         </button>
         <button type="button" class="class-card mb-12 me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness06">
             <p>難&nbsp;過</p>
             <div class="img-box">
-              <img src="../assets/images/06-sadness/sadness06-sad.svg" alt="難過">
+              <img src="https://wavemocards.com/frontend/upload/06-sadness/sadness06-sad.svg" alt="難過">
             </div>
         </button>
         <button type="button" class="class-card mb-12 me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness07">
             <p>無&nbsp;助</p>
             <div class="img-box">
-              <img src="../assets/images/06-sadness/sadness07-powerless.svg" alt="無助">
+              <img src="https://wavemocards.com/frontend/upload/06-sadness/sadness07-powerless.svg" alt="無助">
             </div>
         </button>
         <button type="button" class="class-card mb-12 me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness08">
             <p>悲&nbsp;傷</p>
             <div class="img-box">
-              <img src="../assets/images/06-sadness/sadness08-sorrow.svg" alt="悲傷">
+              <img src="https://wavemocards.com/frontend/upload/06-sadness/sadness08-sorrow.svg" alt="悲傷">
             </div>
         </button>
         <button type="button" class="class-card mb-12 me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness09">
             <p>心&nbsp;痛</p>
             <div class="img-box">
-              <img src="../assets/images/06-sadness/sadness09-heartache.svg" alt="心痛">
+              <img src="https://wavemocards.com/frontend/upload/06-sadness/sadness09-heartache.svg" alt="心痛">
             </div>
         </button>
           <button type="button" class="class-card me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness10">
             <p>憂&nbsp;鬱</p>
             <div class="img-box">
-              <img src="../assets/images/06-sadness/sadness10-depressed.svg" alt="憂鬱">
+              <img src="https://wavemocards.com/frontend/upload/06-sadness/sadness10-depressed.svg" alt="憂鬱">
             </div>
           </button>
           <button type="button" class="class-card me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness11">
             <p>崩&nbsp;潰</p>
             <div class="img-box">
-              <img src="../assets/images/06-sadness/sadness11-collapse.svg" alt="崩潰">
+              <img src="https://wavemocards.com/frontend/upload/06-sadness/sadness11-collapse.svg" alt="崩潰">
             </div>
           </button>
           <button type="button" class="class-card me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness12">
             <p>絕&nbsp;望</p>
             <div class="img-box">
-              <img src="../assets/images/06-sadness/sadness12-despair.svg" alt="絕望">
+              <img src="https://wavemocards.com/frontend/upload/06-sadness/sadness12-despair.svg" alt="絕望">
             </div>
           </button>
         </div>
