--- a/pages/findEmoAnger.html
+++ b/pages/findEmoAnger.html
@@ -37,7 +37,7 @@
                     <button type="button" class="class-card mb-12 bg-anger link-gray-900 class-card-anger" data-bs-toggle="modal" data-bs-target="#addAnger01">
                         <p>不&nbsp;滿</p>
                         <div class="img-box">
-                            <img src="../assets/images/08-anger/anger01-dissatisfied.svg" alt="不滿">
+                            <img src="https://wavemocards.com/frontend/upload/08-anger/anger01-dissatisfied.svg" alt="不滿">
                         </div>
                     </button>
                 </div>
@@ -46,7 +46,7 @@
                     <button type="button" class="class-card mb-12 bg-anger link-gray-900 class-card-anger" data-bs-toggle="modal" data-bs-target="#addAnger02">
                         <p>煩&nbsp;躁</p>
                         <div class="img-box">
-                            <img src="../assets/images/08-anger/anger02-irritated.svg" alt="煩躁">
+                            <img src="https://wavemocards.com/frontend/upload/08-anger/anger02-irritated.svg" alt="煩躁">
                         </div>
                     </button>
                 </div>
@@ -55,7 +55,7 @@
                     <button type="button" class="class-card mb-12 bg-anger link-gray-900 class-card-anger" data-bs-toggle="modal" data-bs-target="#addAnger03">
                         <p>生&nbsp;氣</p>
                         <div class="img-box">
-                            <img src="../assets/images/08-anger/anger03-anger.svg" alt="生氣">
+                            <img src="https://wavemocards.com/frontend/upload/08-anger/anger03-anger.svg" alt="生氣">
                         </div>
                     </button>
                 </div>
@@ -64,7 +64,7 @@
                     <button type="button" class="class-card mb-12 bg-anger link-gray-900 class-card-anger" data-bs-toggle="modal" data-bs-target="#addAnger04">
                         <p>憤&nbsp;怒</p>
                         <div class="img-box">
-                            <img src="../assets/images/08-anger/anger04-indignant.svg" alt="憤怒">
+                            <img src="https://wavemocards.com/frontend/upload/08-anger/anger04-indignant.svg" alt="憤怒">
                         </div>
                     </button>
                 </div>
@@ -73,7 +73,7 @@
                     <button type="button" class="class-card mb-12 bg-anger link-gray-900 class-card-anger" data-bs-toggle="modal" data-bs-target="#addAnger05">
                         <p>暴&nbsp;怒</p>
                         <div class="img-box">
-                            <img src="../assets/images/08-anger/anger05-rage.svg" alt="暴怒">
+                            <img src="https://wavemocards.com/frontend/upload/08-anger/anger05-rage.svg" alt="暴怒">
                         </div>
                     </button>
                 </div>
