--- a/pages/findEmoExpectation.html
+++ b/pages/findEmoExpectation.html
@@ -37,7 +37,7 @@
                     <button type="button" class="class-card mb-12 bg-expectation link-gray-900 class-card-expectation" data-bs-toggle="modal" data-bs-target="#addExpectation01">
                         <p>期&nbsp;待</p>
                         <div class="img-box">
-                            <img src="../assets/images/02-expectation/expaction01-expect.svg" alt="期待">
+                            <img src="https://wavemocards.com/frontend/upload/02-expectation/expaction01-expect.svg" alt="期待">
                         </div>
                     </button>
                 </div>
@@ -46,7 +46,7 @@
                     <button type="button" class="class-card mb-12 bg-expectation link-gray-900 class-card-expectation " data-bs-toggle="modal" data-bs-target="#addExpectation02">
                         <p class="px-0">有信心</p>
                         <div class="img-box">
-                            <img src="../assets/images/02-expectation/expaction02-confidence.svg" alt="有信心">
+                            <img src="https://wavemocards.com/frontend/upload/02-expectation/expaction02-confidence.svg" alt="有信心">
                         </div>
                     </button>
                 </div>
@@ -55,7 +55,7 @@
                     <button type="button" class="class-card mb-12 bg-expectation link-gray-900 class-card-expectation" data-bs-toggle="modal" data-bs-target="#addExpectation03">
                         <p>充滿興趣</p>
                         <div class="img-box">
-                            <img src="../assets/images/02-expectation/expaction03-interested.svg" alt="充滿興趣">
+                            <img src="https://wavemocards.com/frontend/upload/02-expectation/expaction03-interested.svg" alt="充滿興趣">
                         </div>
                     </button>
                 </div>
@@ -64,7 +64,7 @@
                     <button type="button" class="class-card mb-12 bg-expectation link-gray-900 class-card-expectation" data-bs-toggle="modal" data-bs-target="#addExpectation04">
                         <p>渴望</p>
                         <div class="img-box">
-                            <img src="../assets/images/02-expectation/expaction04-desire.svg" alt="渴望">
+                            <img src="https://wavemocards.com/frontend/upload/02-expectation/expaction04-desire.svg" alt="渴望">
                         </div>
                     </button>
                 </div>
