--- a/pages/findEmoFree.html
+++ b/pages/findEmoFree.html
@@ -38,13 +38,13 @@
                     <div class="position-absolute top-0 start--15 free-card d-flex justify-content-center align-items-center bg-expectation link-gray-900 border-0 opacity-25">
                         <p>期&nbsp;待</p>
                         <div class="img-box">
-                            <img src="../assets/images/02-expectation/expaction01-expect.svg" alt="期待">
+                            <img src="https://wavemocards.com/frontend/upload/02-expectation/expaction01-expect.svg" alt="期待">
                         </div>
                     </div>
                     <button type="button" class="position-absolute top-0 start-50 translate-x-middle free-card d-flex justify-content-center align-items-center bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#happy05">
                         <p>興&nbsp;奮</p>
                         <div class="img-box">
-                            <img src="../assets/images/01-happy/happy05-excited.svg" alt="興奮">
+                            <img src="https://wavemocards.com/frontend/upload/01-happy/happy05-excited.svg" alt="興奮">
                         </div>
                     </button>
                 </div>
