--- a/pages/findEmoHate.html
+++ b/pages/findEmoHate.html
@@ -37,7 +37,7 @@
                     <button type="button" class="class-card mb-12 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#addHate01">
                         <p>無&nbsp;聊</p>
                         <div class="img-box">
-                            <img src="../assets/images/07-hate/hate01-boring.svg" alt="無聊">
+                            <img src="https://wavemocards.com/frontend/upload/07-hate/hate01-boring.svg" alt="無聊">
                         </div>
                     </button>
                 </div>
@@ -46,7 +46,7 @@
                     <button type="button" class="class-card mb-12 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#addHate02">
                         <p>厭&nbsp;倦</p>
                         <div class="img-box">
-                            <img src="../assets/images/07-hate/hate02-weariness.svg" alt="厭倦">
+                            <img src="https://wavemocards.com/frontend/upload/07-hate/hate02-weariness.svg" alt="厭倦">
                         </div>
                     </button>
                 </div>
@@ -55,7 +55,7 @@
                     <button type="button" class="class-card mb-12 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#addHate03">
                         <p>自&nbsp;卑</p>
                         <div class="img-box">
-                            <img src="../assets/images/07-hate/hate03-inferiority.svg" alt="自卑">
+                            <img src="https://wavemocards.com/frontend/upload/07-hate/hate03-inferiority.svg" alt="自卑">
                         </div>
                     </button>
                 </div>
@@ -64,7 +64,7 @@
                     <button type="button" class="class-card mb-12 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#addHate04">
                         <p>討&nbsp;厭</p>
                         <div class="img-box">
-                            <img src="../assets/images/07-hate/hate04-hate.svg" alt="討厭">
+                            <img src="https://wavemocards.com/frontend/upload/07-hate/hate04-hate.svg" alt="討厭">
                         </div>
                     </button>
                 </div>
@@ -73,7 +73,7 @@
                     <button type="button" class="class-card mb-12 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#addHate05">
                         <p>嫉&nbsp;妒</p>
                         <div class="img-box">
-                            <img src="../assets/images/07-hate/hate05-jealousy.svg" alt="嫉妒">
+                            <img src="https://wavemocards.com/frontend/upload/07-hate/hate05-jealousy.svg" alt="嫉妒">
                         </div>
                     </button>
                 </div>
@@ -82,7 +82,7 @@
                     <button type="button" class="class-card mb-12 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#addHate06">
                         <p>厭&nbsp;惡</p>
                         <div class="img-box">
-                            <img src="../assets/images/07-hate/hate06-disgust.svg" alt="厭惡">
+                            <img src="https://wavemocards.com/frontend/upload/07-hate/hate06-disgust.svg" alt="厭惡">
                         </div>
                     </button>
                 </div>
@@ -91,7 +91,7 @@
                     <button type="button" class="class-card mb-12 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#addHate07">
                         <p>噁&nbsp;心</p>
                         <div class="img-box">
-                            <img src="../assets/images/07-hate/hate07-nausea.svg" alt="噁心">
+                            <img src="https://wavemocards.com/frontend/upload/07-hate/hate07-nausea.svg" alt="噁心">
                         </div>
                     </button>
                 </div>
@@ -100,7 +100,7 @@
                     <button type="button" class="class-card mb-12 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#addHate08">
                         <p>怨&nbsp;恨</p>
                         <div class="img-box">
-                            <img src="../assets/images/07-hate/hate08-resentment.svg" alt="怨恨">
+                            <img src="https://wavemocards.com/frontend/upload/07-hate/hate08-resentment.svg" alt="怨恨">
                         </div>
                     </button>
                 </div>
