--- a/findEmoSadness.html
+++ b/findEmoSadness.html
@@ -231,6 +231,12 @@
                     </li>
                     <li class="mb-4">
                         <a class="d-flex justify-content-between" href="https://www.linkedin.com/in/techleon/" target="_blank">
+                            <span>Database Developer</span>
+                            <span>Leon Wu</span>
+                        </a>
+                    </li>
+                    <li class="mb-4">
+                        <a class="d-flex justify-content-between" href="https://www.linkedin.com/in/techleon/" target="_blank">
                             <span>Back-End Developer</span>
                             <span>Leon Wu</span>
                         </a>
