--- a/findEmoAction.html
+++ b/findEmoAction.html
@@ -93,12 +93,12 @@
                 <div class="container mb-48">
                     <div class="mb-24 row align-items-stretch">
                         <div class="col-9 bg-main-tint03 rounded">
-                            <label for="whatHappened" class="d-block py-12">
+                            <label for="whatIdid" class="d-block py-12">
                                 <p class="mb-4 text-main fw-500  fs-7">
                                     接下來，想邀請ＯＯ回想在感受到「ＸＸ、ＸＸ、ＸＸ」情緒後，做了什麼事情呢？
                                 </p>
                             </label>
-                            <textarea class="w-100 mb-12 p-12 border rounded border-gray-500 text-gray-900" id="whatHappened" name="whatHappened"></textarea>
+                            <textarea class="w-100 mb-12 p-12 border rounded border-gray-500 text-gray-900" id="whatIdid" name="whatHappened"></textarea>
                         </div>
                         <div class="col-3 d-flex justify-content-end align-items-center">
                             <img class="d-block" src="/wavemocards/assets/lime-action-679a9ee9.svg" alt="a man is diving" id="img">
@@ -109,13 +109,13 @@
                 <div class="container mb-48">
                     <div class="mb-24 row align-items-stretch">
                         <div class="col-9 order-2 bg-main-tint03 rounded">
-                            <label for="whatHappened" class="d-block py-12">
+                            <label for="resault" class="d-block py-12">
                                 <p class="mb-4 text-gray-550 fs-8">謝謝你願意寫下自己的故事。</p>
                                 <p class="mb-4 text-main fw-500  fs-7">
                                     想請親愛的ＯＯ，寫下關於上述所做的事情後，發生了什麼樣的結果？
                                 </p>
                             </label>
-                            <textarea class="w-100 mb-12 p-12 border rounded border-gray-500 text-gray-900" id="whatHappened" name="whatHappened"></textarea>
+                            <textarea class="w-100 mb-12 p-12 border rounded border-gray-500 text-gray-900" id="resault" name="whatHappened"></textarea>
                         </div>
                         <div class="col-3 order-1 d-flex justify-content-end align-items-center">
                             <img class="d-block" src="/wavemocards/assets/lime-happened-9942cb27.svg" alt="a man is diving" id="img">
@@ -126,12 +126,12 @@
                 <div class="container mb-48">
                     <div class="mb-24 row align-items-stretch">
                         <div class="col-9 order-1 bg-main-tint03 rounded">
-                            <label for="whatHappened" class="d-block py-12">
+                            <label for="feeling" class="d-block py-12">
                                 <p class="mb-4 text-main fw-500  fs-7">
                                     對於上述發生的結果，你有什麼樣的感受呢？
                                 </p>
                             </label>
-                            <textarea class="w-100 mb-12 p-12 border rounded border-gray-500 text-gray-900" id="whatHappened" name="whatHappened"></textarea>
+                            <textarea class="w-100 mb-12 p-12 border rounded border-gray-500 text-gray-900" id="feeling" name="whatHappened"></textarea>
                         </div>
                         <div class="col-3 order-2 d-flex justify-content-end align-items-center">
                             <img class="d-block" src="/wavemocards/assets/lime-feel-2229e121.svg" alt="a man is diving" id="img">
@@ -192,7 +192,7 @@
                 <div class="container mb-24">
                     <div class="mb-24 row align-items-stretch">
                         <div class="col-9 order-1 bg-main-tint03 rounded">
-                            <label for="whatHappened" class="d-block py-12">
+                            <label for="betterAction" class="d-block py-12">
                                 <p class="mb-4 text-gray-550 fs-8">如果這次所做的事情/行為，所帶來的結果不太好的話。</p>
                                 <p class="mb-4 text-main fw-500  fs-7">
                                     想邀請ＯＯ，想一想下一次發生類似的事情和感受時，
@@ -201,7 +201,7 @@
                                     可以做什麼樣的反應或是行為/行動，而可以得到比較好的結果呢？
                                 </p>
                             </label>
-                            <textarea class="w-100 mb-12 p-12 border rounded border-gray-500 text-gray-900" id="whatHappened" name="whatHappened"></textarea>
+                            <textarea class="w-100 mb-12 p-12 border rounded border-gray-500 text-gray-900" id="betterAction" name="whatHappened"></textarea>
                         </div>
                         <div class="col-3 order-2 d-flex justify-content-end align-items-center">
                             <img class="d-block" src="/wavemocards/assets/lime-nextActionPlan-d7ec7f23.svg" alt="a man is diving" id="img">
