--- a/myRecords.html
+++ b/myRecords.html
@@ -84,7 +84,7 @@
               <th scope="col"></th>
               <th scope="col">日期</th>
               <th scope="col">情緒與強度</th>
-              <th scope="col">分享次數</th>
+              <th scope="col">分享人數</th>
               <th scope="col">情緒故事與分享</th>
             </tr>
           </thead>
